@startuml

class House {
    - roomList : List<Room>
    + getRoomList() : List<Room>
    + getRoomByName(...) : Room
}

class Room {
    - name : String
    + getName() : String
    + getDimensions() : Dimensions
    + createDevice() : Device
    - addDevice() : boolean
}

class Dimensions{
    - width : double
    - length : double
    - height : double

    + getWidth() : double
    + getLength() : double
    + getHeight() : double
}

class Device{
    + name : String
    + type : String

    + Device(...)
}

class DeviceDTO {
    - name : String
    - type : String
    - roomName : String
    + DeviceDTO(...)
    + getName() : String
    + getType() : String
    + getRoomName() : String
}

class AddDeviceToRoomController {
    - house : House
    + AddDeviceToRoomController(...)
    + getRooms(...) : List<RoomDTO>
    + addDeviceToRoom(...) : boolean
}

class GetRoomListController {
    - house : House
    + ControllerGetRoomList(...)
    + getRoomList() : List<RoomDTO>
}

class MapperToRoomDTO {

    + MapperToRoomDTO(...)
    + getRoomList(...) : List<RoomDTO>
    - toRoomDTO(...) : RoomDTO
}

class RoomDTO {
    - name : String
    - floor : int
    - width : double
    - length : double
    - height : double

    + RoomDTO(...)
    + getName() : String
    + getFloor() : int
    + getWidth() : double
    + getLength() : double
    + getHeight() : double
}

AddDeviceToRoomController "1" ..> "1" House : uses
GetRoomListController "1" ..> "1" House : uses
House "1" *-- "List<Room>" Room : contains
Room "1" *-- "List<Device>" Device : contains
AddDeviceToRoomController "1" ..> "1" GetRoomListController : uses
AddDeviceToRoomController "1" ..> "1" DeviceDTO : uses
GetRoomListController "1" ..> "1" MapperToRoomDTO : uses
MapperToRoomDTO "1" ..> "List<RoomDTO>" RoomDTO : creates
Room "1" *-- "1" Dimensions : has

@enduml